# src/main/java/com/ibronit/bankemployee/application/rest/exception/GlobalExceptionHandler.java
@@ -1,0 +1,27 @@
+package com.ibronit.bankemployee.application.rest.exception;
+
+import com.ibronit.bankemployee.application.rest.model.ErrorResponse;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+
+@ControllerAdvice
+public class GlobalExceptionHandler {
+
+  @ExceptionHandler(NotFoundException.class)
+  public ResponseEntity<ErrorResponse> handleProductNotFoundException(NotFoundException ex) {
+    ErrorResponse errorResponse = new ErrorResponse(ex.getMessage());
+    return ResponseEntity
+        .status(HttpStatus.NOT_FOUND)
+        .body(errorResponse);
+  }
+
+  @ExceptionHandler(ClientErrorException.class)
+  public ResponseEntity<ErrorResponse> handleProductNotFoundException(ClientErrorException ex) {
+    ErrorResponse errorResponse = new ErrorResponse(ex.getMessage());
+    return ResponseEntity
+        .status(HttpStatus.BAD_REQUEST)
+        .body(errorResponse);
+  }
+}
